# astrox

./: .eslintrc.cjs  .gitignore  .prettierrc  Cargo.toml  bun.lockb  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
src/: env.d.ts  main.rs
src/api_handlers/: mod.rs  server_time.rs  util.rs
src/components/: display-server-time.tsx
src/layouts/: Layout.astro
src/pages/: index.astro
