[package]
name = "astrox"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0" }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "compression-gzip"] }
tracing = "0.1.40"
